--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<div class="bg-white shadow">
+  <div class="container mx-auto px-4 py-2 md:py-3">
+    <div class="flex justify-between items-center">
+      <!-- Twitter Tittle -->
+      <div class="flex justify-between text-lg md:text-xl font-bold">
+        <img src="assets/twitter-logo.png" />
+        <h1>Twitter</h1>
+      </div>
+      <!-- user -->
+      <div class="relative">
+        <div
+          class="bg-blue-200 text-blue-600 flex items-center justify-center rounded-full w-10 h-10 cursor-pointer"
+        >
+          L
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
