--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,18 @@
 <header class="mb-10 w-full">
-    <app-header />
+  <app-header></app-header>
 </header>
 
-<div class="flex 
-items-center 
-justify-center 
-container 
-mx-auto">
-    <app-new-post />
+<div class="flex items-center justify-center container mx-auto">
+  <app-new-post></app-new-post>
+</div>
+
+<div
+  class="flex flex-col items-center justify-center container mx-auto"
+  *ngFor="let tw of tweets"
+>
+  <app-tweet [tweetMessage]="tw"></app-tweet>
 </div>
 
 <footer class="fixed bottom-0 mx-auto w-full">
-    <app-footer />
+  <app-footer></app-footer>
 </footer>
